# rag

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/config/: llm-config.yml  llm_config.py
src/rag/: retrieve_vector.py  save_vector.py
src/utils/: logger.py  model.py  rag_utils.py
tests/utils/: test_rag_utils.py  test_retrieve_vector.py  test_save_vector.py
