[project]
name = "Rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "bha6kar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "langchain-google-vertexai (>=2.0.27,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "google-genai (>=1.26.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "isort (>=6.0.1,<7.0.0)",
    "together (>=1.5.21,<2.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "tiktoken (>=0.10.0,<0.11.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (real LLM, DB access, external dependencies)",
    "unit: marks tests as unit tests (pure, fast, isolated)"
]
